# sphertt

./: .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: diagnostics_demo.py  quickstart.py  ttstate_demo.py
experiments/: README.md
experiments/005/: exp005.py  exp005b.py  exp005c.py  make_figs.py  results005.jsonl  results005b.jsonl  results005c.jsonl
experiments/006/: PREDICTIONS.md  analyze006.py  exp006.py  exp006b.py  exp006c.py  exp006d.py  results006.jsonl  results006b.jsonl  results006c.jsonl  results006d.jsonl
experiments/007/: PREDICTIONS.md  exp007.py  exp007b_rank.py  exp007c.py  make_figs007.py  results007.jsonl  results007b.jsonl
experiments/008/: exp008_seeds.py  results008.jsonl
experiments/009/: exp009_tasks.py  exp009_tasks2.py  results009.jsonl  results009b.jsonl
experiments/010/: exp010_amp_validation.py  make_fig010.py  results010.jsonl
experiments/011/: exp011_gpu_bench.py  results011.jsonl
experiments/012/: exp012_common.py  exp012_cpu.py  exp012_d15.py  exp012_factorial.py  exp012_gpu.py  exp012_seeds_cpu.py  exp012_seeds_gpu.py  results012.jsonl
experiments/013/: exp013_cpu.py  exp013_gpu.py  results013.jsonl
experiments/014/: exp014_check.py  exp014_definitive.py  exp014_gpu.py  exp014_subsets.py  results014.jsonl
experiments/015/: exp015_analysis.py  exp015_common.py  exp015_cpu.py  exp015_gpu.py  make_figs_v2.py  results015.jsonl
src/sphertt/: tt.py  (+7 more)
tests/: test_diagnostics.py  test_gpu.py  test_model.py  test_reservoir.py  test_tt.py  test_ttstate.py
(+7 files in other folders)
