[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sphertt"
version = "0.5.2"
description = "Hyperspherical reservoir computing with tensor-train connectivity — reservoirs beyond the memory wall, with built-in truncation-error diagnostics"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Takuya Okamura", email = "voltatable@gmail.com" }]
keywords = [
    "reservoir computing", "echo state network", "tensor train",
    "matrix product states", "tensor networks", "time series",
    "hypersphere", "edge computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
dev = ["pytest>=7"]
gpu = ["cupy-cuda12x"]

[project.urls]
Homepage = "https://github.com/Volta-0936/sphertt"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
